Fix value indicator regression and adjust contrast

--- a/vtl/style.css
+++ b/vtl/style.css
@@ -3,7 +3,6 @@ body {
   width: 100%;
   height: 100%;
   margin: 0;
-  background-color: #edf2f4;
 }
 
 body {
@@ -14,7 +13,7 @@ body {
 }
 
 header {
-  background-color: white;
+  /* background-color: white; */
 }
 
 header nav {
